[gd_scene load_steps=27 format=2]

[ext_resource path="res://entity/player/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/entity/cat/spr_pc_walk_strip4.png" type="Texture" id=2]
[ext_resource path="res://assets/entity/cat/spr_pc_jump_strip2.png" type="Texture" id=3]
[ext_resource path="res://assets/entity/cat/spr_pc_shoot_strip5.png" type="Texture" id=4]
[ext_resource path="res://assets/entity/cat/spr_pc_beat_strip8.png" type="Texture" id=5]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 38, 43 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 36, 48 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 36, 0, 36, 48 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 38, 43 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 38, 0, 38, 43 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 76, 0, 38, 43 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 114, 0, 38, 43 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 74, 52 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 4 )
region = Rect2( 74, 0, 74, 52 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 4 )
region = Rect2( 148, 0, 74, 52 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 4 )
region = Rect2( 222, 0, 74, 52 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 4 )
region = Rect2( 296, 0, 74, 52 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 85, 54 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 5 )
region = Rect2( 85, 0, 85, 54 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 5 )
region = Rect2( 170, 0, 85, 54 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 5 )
region = Rect2( 255, 0, 85, 54 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 5 )
region = Rect2( 340, 0, 85, 54 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 5 )
region = Rect2( 425, 0, 85, 54 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 5 )
region = Rect2( 510, 0, 85, 54 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 5 )
region = Rect2( 595, 0, 85, 54 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ) ],
"loop": false,
"name": "jump",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ) ],
"loop": false,
"name": "fall",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "walk",
"speed": 10.0
}, {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "shot",
"speed": 11.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "hit",
"speed": 11.0
} ]

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
build_mode = 1
polygon = PoolVector2Array( 0, -45, 21, -35, 27, -3, 25, 22, 14, 43, -14, 43, -26, 23, -30, -2, -24, -35 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 2 )
animation = "idle"
playing = true

[node name="Camera2D" type="Camera2D" parent="."]
scale = Vector2( 2, 2 )
current = true
limit_left = 0
limit_top = 0
limit_bottom = 775
smoothing_enabled = true
smoothing_speed = 3.0

[node name="shot_right" type="Position2D" parent="."]
position = Vector2( 33, -4 )
scale = Vector2( 2, 2 )

[node name="shot_left" type="Position2D" parent="."]
position = Vector2( -44, -4 )
scale = Vector2( 4, 4 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
